chore: update .gitignore file

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not op_mini all",
-    "ie 9"
+    "not op_mini all"
   ],
   "devDependencies": {
     "react-app-polyfill": "^1.0.1",
